fix: made wrapped nav

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -5,5 +5,4 @@ html {
 body {
   font-family: $main-font-name;
   min-width: $min-content-width;
-  width: 2000px;
 }
