--- a/src/sass/components/_navigation.scss
+++ b/src/sass/components/_navigation.scss
@@ -1,17 +1,13 @@
 .navigation {
-  @include flex;
+  @include flex($flex-wrap: wrap);
   width: 100%;
 
   .navigation__link {
     @include font(1.4rem);
     cursor: pointer;
     text-transform: uppercase;
-    padding: 14px 16px;
+    padding: 15px 15px 15px 0;
     letter-spacing: 1px;
-
-    &:first-child {
-      padding-left: 0;
-    }
 
     &:last-child {
       padding-right: 0;
